--- a/style.css
+++ b/style.css
@@ -1,73 +1,71 @@
 * {
   box-sizing: border-box;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
 }
 
 .header {
-    margin: 107px auto;
-    text-align: center;
-    width: 1400px;
-    margin-bottom: 30px;
+  margin: 107px auto;
+  text-align: center;
+  width: 1400px;
+  margin-bottom: 30px;
 }
 
 .line {
-    width: 64px;
-    height: 2px;
-    background-color: orange;
-    margin: 0px auto;
-    margin-bottom: 30px;
+  width: 64px;
+  height: 2px;
+  background-color: orange;
+  margin: 0px auto;
+  margin-bottom: 30px;
 }
 
 .maintext {
-    font-size: 14px;
-    color: #86878B;
-    text-align: center;
-    margin: 0px auto;
-    margin-bottom: 80px;
+  font-size: 14px;
+  color: #86878b;
+  text-align: center;
+  margin: 0px auto;
+  margin-bottom: 80px;
 }
 
 .mainblock {
-    width: 1350px;
-    margin: 0px auto;
+  width: 1242px;
+  margin: 0px auto;
 }
 
-
 .block {
-    float: left;
-    width: 350px;
-    margin: 0px 32px;
-    text-align: center;
+  float: left;
+  width: 350px;
+  margin: 0px 32px;
+  text-align: center;
 }
 
 p {
-    font-size: 14px;
-    color: #86878B;
+  font-size: 14px;
+  color: #86878b;
 }
 
 .image_1 {
-    border: 2px solid orange;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin: 0px auto;
-    padding: 21px 26px 21px 25px;
+  border: 2px solid orange;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 0px auto;
+  padding: 21px 26px 21px 25px;
 }
 
 .image_2 {
-    border: 2px solid orange;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin: 0px auto;
-    padding: 24px 18px 25px 17px;
+  border: 2px solid orange;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 0px auto;
+  padding: 24px 18px 25px 17px;
 }
 
-
 .image_3 {
-    border: 2px solid orange;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    margin: 0px auto;
-    padding: 19px 27px 20px 26px;
+  border: 2px solid orange;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  margin: 0px auto;
+  padding: 19px 27px 20px 26px;
 }
